made some changes

--- a/index.html
+++ b/index.html
@@ -108,7 +108,60 @@
                         <h2>Playlist</h2>
                         <p>Hits to boost your mood and fill you with happiness!</p>
                     </div>
-                   
+                    <div class="card  squareborderradius">
+                        <div class="play">
+                            <img src="./svgs/play.svg" alt="">
+                        </div>
+
+                        <img src="./images/pokemon2.jpg" alt="">
+                        <h2>Happy Hits</h2>
+                        <p>Hits to boost your mood and fill you with happiness!</p>
+                    </div>
+                    <div class="card  squareborderradius">
+                        <div class="play">
+                            <img src="./svgs/play.svg" alt="">
+                        </div>
+
+                        <img src="./images/pokemon2.jpg" alt="">
+                        <h2>Happy Hits</h2>
+                        <p>Hits to boost your mood and fill you with happiness!</p>
+                    </div>
+                    <div class="card  squareborderradius">
+                        <div class="play">
+                            <img src="./svgs/play.svg" alt="">
+                        </div>
+
+                        <img src="./images/pokemon2.jpg" alt="">
+                        <h2>Happy Hits</h2>
+                        <p>Hits to boost your mood and fill you with happiness!</p>
+                    </div>
+                    <div class="card  squareborderradius">
+                        <div class="play">
+                            <img src="./svgs/play.svg" alt="">
+                        </div>
+
+                        <img src="./images/pokemon2.jpg" alt="">
+                        <h2>Happy Hits</h2>
+                        <p>Hits to boost your mood and fill you with happiness!</p>
+                    </div>
+                    <div class="card  squareborderradius">
+                        <div class="play">
+                            <img src="./svgs/play.svg" alt="">
+                        </div>
+
+                        <img src="./images/pokemon2.jpg" alt="">
+                        <h2>Happy Hits</h2>
+                        <p>Hits to boost your mood and fill you with happiness!</p>
+                    </div>
+                    <div class="card  squareborderradius">
+                        <div class="play">
+                            <img src="./svgs/play.svg" alt="">
+                        </div>
+
+                        <img src="./images/pokemon2.jpg" alt="">
+                        <h2>Happy Hits</h2>
+                        <p>Hits to boost your mood and fill you with happiness!</p>
+                    </div>
 
                 </div>
 
